--- a/package.json
+++ b/package.json
@@ -24,6 +24,10 @@
   },
   "dependencies": {
     "@zxing/browser": "^0.1.4",
+    "axios": "^1.4.0",
+    "cors": "^2.8.5",
+    "dotenv-webpack": "^8.0.1",
+    "express": "^4.18.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.12.1",
