--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,12 @@
 {
-  "rewrites": [{ "source": "/(.*)", "destination": "/" }]
+  "rewrites": [
+    { 
+        "source": "/api/(.*)", 
+        "destination": "/api" 
+    },
+    {
+      "source": "/((?!api/.*).*)",
+      "destination": "/"
+    }
+  ]
 }
